--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./main.js",
   "scripts": {
-    "dev": "webpack-dev-server --port 8081 --devtool eval --hot --progress --colors",
+    "dev-setup": "mkdir -p fonts && cp ./node_modules/pearson-elements/dist/fonts/* ./fonts && cp ./node_modules/pearson-elements/dist/css/elements.css ./demo",
+    "dev": "npm run dev-setup && webpack-dev-server --port 8081 --devtool eval --hot --progress --colors",
     "pretest": "npm run lint",
     "test": "jest",
     "pretest-cov": "npm run lint",
@@ -56,6 +57,7 @@
     "jest-cli": "~0.9.0",
     "json-loader": "~0.5.4",
     "node-sass": "^3.4.2",
+    "pearson-elements": "^0.3.1",
     "react": "^15.0.0",
     "react-addons-test-utils": "^15.0.0",
     "react-dom": "^15.0.0",
