--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "webpack -p",
     "coveralls": "coveralls < coverage/lcov.info",
     "lint": "eslint src/js/**",
-    "lint-all": "eslint src/js/** __tests__/** demo/*.js",
+    "lint-all": "eslint src/js/** demo/demo.js __tests__/**",
     "gen-changelog": "node ./npm_scripts/gen-changelog.js",
     "version": "npm run gen-changelog && git add CHANGELOG.md",
     "ci": "npm run test-cov && npm run build",
