chore: Undo last commit and add colors as a dev dependency.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint-all": "eslint src/js/** demo/demo.js __tests__/**",
     "gen-changelog": "node ./npm_scripts/gen-changelog.js",
     "version": "npm run gen-changelog && git add CHANGELOG.md",
-    "ci": "npm run verify && npm run test-cov && npm run build",
+    "ci": "npm run test-cov && npm run build",
     "release": "node ./npm_scripts/release.js",
     "verify": "node ./npm_scripts/verify.js"
   },
@@ -47,6 +47,7 @@
     "babel-preset-es2015": "~6.3.13",
     "babel-preset-react": "~6.3.13",
     "babel-preset-stage-0": "~6.5.0",
+    "colors": "^1.1.2",
     "coveralls": "~2.11.9",
     "css-loader": "~0.23.0",
     "enzyme": "~2.2.0",
