test: Render a component into a detached DOM node in the document, using JSDOM.

--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "dev-setup": "mkdir -p fonts && cp ./node_modules/pearson-elements/dist/fonts/* ./fonts && cp ./node_modules/pearson-elements/dist/css/elements.css ./demo",
     "dev": "npm run dev-setup && webpack-dev-server --port 8081 --devtool eval --hot --progress --colors",
     "pretest": "npm run lint",
-    "test": "mocha --compilers js:babel-register --require babel-polyfill --require intl --recursive __tests__",
+    "test": "mocha --compilers js:babel-register --require babel-polyfill --require intl --require __tests__/utils/dom.js --recursive __tests__",
     "pretest-cov": "npm run lint",
     "test-cov": "jest --coverage",
     "build": "webpack -p",
     "coveralls": "coveralls < coverage/lcov.info",
-    "lint": "eslint src/js/**",
-    "lint-all": "eslint src/js/** demo/demo.js __tests__/**",
+    "lint": "eslint src/js/** demo/demo.js",
     "gen-changelog": "node ./npm_scripts/gen-changelog.js",
     "version": "npm run gen-changelog && git add CHANGELOG.md",
     "ci": "npm run test-cov && npm run build",
@@ -48,6 +47,7 @@
     "expect-jsx": "~2.5.1",
     "file-loader": "~0.8.5",
     "intl": "~1.1.0",
+    "jsdom": "~8.5.0",
     "json-loader": "~0.5.4",
     "mocha": "~2.4.5",
     "node-sass": "~3.4.2",
