chore: Remove obsolete jest code coverage tooling.

--- a/package.json
+++ b/package.json
@@ -8,14 +8,11 @@
     "dev": "npm run dev-setup && webpack-dev-server --port 8081 --devtool eval --hot --progress --colors",
     "pretest": "npm run lint",
     "test": "mocha --compilers js:babel-register --require babel-polyfill --require intl --require __tests__/utils/dom.js --recursive __tests__",
-    "pretest-cov": "npm run lint",
-    "test-cov": "jest --coverage",
     "build": "webpack -p",
-    "coveralls": "coveralls < coverage/lcov.info",
     "lint": "eslint src/js/** demo/demo.js",
     "gen-changelog": "node ./npm_scripts/gen-changelog.js",
     "version": "npm run gen-changelog && git add CHANGELOG.md",
-    "ci": "npm run test-cov && npm run build",
+    "ci": "npm test && npm run build",
     "release": "node ./npm_scripts/release.js",
     "verify": "node ./npm_scripts/verify.js"
   },
@@ -38,7 +35,6 @@
     "babel-preset-stage-0": "~6.5.0",
     "babel-register": "~6.7.2",
     "colors": "~1.1.2",
-    "coveralls": "~2.11.9",
     "css-loader": "~0.23.0",
     "eslint": "~1.10.3",
     "eslint-loader": "~1.1.1",
