--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev-setup": "mkdir -p fonts && cp ./node_modules/pearson-elements/dist/fonts/* ./fonts && cp ./node_modules/pearson-elements/dist/css/elements.css ./demo",
     "dev": "npm run dev-setup && webpack-dev-server --port 8081 --devtool eval --hot --progress --colors",
     "pretest": "npm run lint",
-    "test": "mocha --compilers js:babel-register --require babel-polyfill --require intl --require __tests__/utils/dom.js --recursive __tests__",
+    "test": "mocha --compilers js:babel-register --require babel-polyfill --require intl --require __tests__/utils/dom.js __tests__/*.js",
     "build": "webpack -p",
     "lint": "eslint src/js/** demo/demo.js",
     "gen-changelog": "node ./npm_scripts/gen-changelog.js",
