chore:initial setup

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "url": "https://github.com/Pearson-Higher-Ed/"
   },
   "dependencies": {
-    "react-intl": "~2.0.1"
+    "react-intl": "~2.0.1",
+    "react-modal": "^1.4.0"
   },
   "devDependencies": {
     "babel-core": "~6.3.17",
