fix:forgot to remove .git file when developing modalresetting to last commit b216d1b23d10ac0c05f10d1f83995d64297b1035

--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "url": "https://github.com/Pearson-Higher-Ed/"
   },
   "dependencies": {
-    "react-intl": "~2.0.1",
-    "react-modal": "^1.4.0"
+    "react-intl": "~2.0.1"
   },
   "devDependencies": {
     "babel-core": "~6.3.17",
