chore: Prep for npm scripts module import, and set up production cheap module source maps. Delete npm scripts and pull from @pearson-components/npm-scripts. Add naming convention to READMEs. Add missing conventional-changelog dependency.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 .DS_Store
 .idea
-build/*.js
 node_modules
 fonts
 demo/elements.css
 npm-debug.log
 *.iml
+build/dev*
+build/dist*
+npm_scripts/*.js
