chore: Make all remaining npm scripts reference the copies from the updated npm-scripts dependency.

--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "./main.js",
   "scripts": {
-    "dev-setup": "mkdir -p fonts && cp ./node_modules/pearson-elements/dist/fonts/* ./fonts && cp ./node_modules/pearson-elements/dist/css/elements.css ./demo",
-    "dev": "npm run dev-setup && webpack-dev-server --port 8081 --devtool source-map --hot --progress --colors",
-    "pretest": "npm run lint",
-    "test": "mocha --compilers js:babel-register --require babel-polyfill --require intl --require test/utils/dom.js",
-    "build": "webpack -p",
-    "lint": "eslint src/js/** demo/demo.js",
+    "dev-setup": "node ./npm_scripts/dev-setup.js",
+    "dev": "node ./npm_scripts/dev.js",
+    "pretest": "node ./npm_scripts/pretest.js",
+    "test": "node ./npm_scripts/test.js",
+    "build": "node ./npm_scripts/build.js",
+    "lint": "node ./npm_scripts/lint.js",
     "gen-changelog": "node ./npm_scripts/gen-changelog.js",
-    "version": "npm run gen-changelog && git add CHANGELOG.md",
-    "ci": "npm test && npm run build",
+    "version": "node ./npm_scripts/version.js",
+    "ci": "node ./npm_scripts/ci.js",
     "release": "node ./npm_scripts/release.js",
     "verify": "node ./npm_scripts/verify.js",
     "postinstall": "cp ./node_modules/@pearson-components/npm-scripts/npm_scripts/*.js ./npm_scripts"
@@ -27,7 +27,7 @@
     "react-intl": "~2.0.1"
   },
   "devDependencies": {
-    "@pearson-components/npm-scripts": "^0.1.0",
+    "@pearson-components/npm-scripts": "^0.2.0",
     "babel-core": "~6.3.17",
     "babel-eslint": "~4.1.6",
     "babel-loader": "~6.2.0",
@@ -50,7 +50,7 @@
     "json-loader": "~0.5.4",
     "mocha": "~2.4.5",
     "node-sass": "~3.4.2",
-    "pearson-elements": "^0.11.0",
+    "pearson-elements": "^0.12.0",
     "react": "^15.0.0",
     "react-addons-test-utils": "^15.0.0",
     "react-dom": "^15.0.0",
