refactor: Change the main in package.json to point to the built bundle so that the source is not required to be published to npm.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "",
   "version": "0.0.0",
   "description": "",
-  "main": "./main.js",
+  "main": "./build/dist.component-name.js",
   "scripts": {
     "dev-setup": "node ./npm_scripts/dev-setup.js",
     "dev": "node ./npm_scripts/dev.js",
