chore: Elements / scripts update

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev-setup": "node ./npm_scripts/dev-setup.js",
     "dev": "node ./npm_scripts/dev.js",
+    "start": "npm run dev",
     "pretest": "node ./npm_scripts/pretest.js",
     "test": "node ./npm_scripts/test.js",
     "build": "node ./npm_scripts/build.js",
@@ -27,7 +28,7 @@
     "react-intl": "~2.0.1"
   },
   "devDependencies": {
-    "@pearson-components/npm-scripts": "^0.3.6",
+    "@pearson-components/npm-scripts": "^0.3.7",
     "babel-core": "~6.3.17",
     "babel-eslint": "~4.1.6",
     "babel-loader": "~6.2.0",
@@ -52,7 +53,7 @@
     "json-loader": "~0.5.4",
     "mocha": "~2.4.5",
     "node-sass": "~3.7.0",
-    "pearson-elements": "^0.15.0",
+    "pearson-elements": "^1.0.5",
     "react": "^15.0.0",
     "react-addons-test-utils": "^15.0.0",
     "react-dom": "^15.0.0",
