--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "node ./npm_scripts/dev.js",
     "start": "npm run dev",
     "pretest": "node ./npm_scripts/pretest.js",
-    "test": "node ./npm_scripts/test.js",
+    "test": "jest --coverage",
     "build": "node ./npm_scripts/build.js",
     "lint": "node ./npm_scripts/lint.js",
     "gen-changelog": "node ./npm_scripts/gen-changelog.js",
@@ -24,6 +24,27 @@
     "type": "git",
     "url": "https://github.com/Pearson-Higher-Ed/alerts"
   },
+  "jest": {
+    "moduleFileExtensions": [
+      "jsx",
+      "js",
+      "json"
+    ],
+    "collectCoverageFrom": [
+      "**/src/js/AlertList.js",
+      "**/src/js/Alert.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "lines": 80
+      }
+    },
+    "testPathIgnorePatterns": [
+      "<rootDir>/(build|node_modules|demo|fonts|npm_scripts|translations|coverage)/"
+    ],
+    "testEnvironment": "node",
+    "verbose": true
+  },
   "dependencies": {
     "react-intl": "~2.0.1"
   },
@@ -31,6 +52,7 @@
     "@pearson-components/npm-scripts": "^0.3.7",
     "babel-core": "~6.3.17",
     "babel-eslint": "~4.1.6",
+    "babel-jest": "^18.0.0",
     "babel-loader": "~6.2.0",
     "babel-polyfill": "~6.7.4",
     "babel-preset-es2015": "~6.3.13",
@@ -40,6 +62,7 @@
     "colors": "~1.1.2",
     "conventional-changelog": "~1.1.0",
     "css-loader": "~0.23.0",
+    "enzyme": "^2.7.0",
     "eslint": "~1.10.3",
     "eslint-loader": "~1.1.1",
     "eslint-plugin-react": "~3.16.1",
@@ -49,7 +72,8 @@
     "fs-extra": "^1.0.0",
     "ignore-styles": "~5.0.1",
     "intl": "~1.1.0",
-    "jsdom": "~8.5.0",
+    "jest": "^18.1.0",
+    "jsdom": "^8.5.0",
     "json-loader": "~0.5.4",
     "mocha": "~2.4.5",
     "node-sass": "~3.7.0",
