chore: Split out PropTypes from react

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "mocha": "~2.4.5",
     "node-sass": "~3.7.0",
     "pearson-elements": "^1.5.1",
+    "prop-types": "^15.5.10",
     "react": "^15.0.0",
     "react-addons-test-utils": "^15.0.0",
     "react-dom": "^15.0.0",
