--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react": "^15.0.0",
     "react-addons-test-utils": "^15.0.0",
     "react-dom": "^15.0.0",
+    "react-transition-group": "^1.2.0",
     "sass-loader": "~3.2.0",
     "semver": "~5.1.0",
     "style-loader": "~0.13.0",
