feat: Sonar integrated with Travis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,8 @@ sonar.projectKey=PDA.Alerts
 sonar.projectName=PDA.Alerts
 sonar.projectVersion=1.0
 
+sonar.host.url=https://devops-tools.pearson.com/sonar/
+
 sonar.javascript.coveragePlugin=lcov
 
 sonar.sources=src/js
