--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,9 @@ addons:
 script:
 - npm run copy-utils
 - npm run ci
-- chmod 777 ./test/shell_scripts/run_tests.sh
-- ./test/shell_scripts/run_tests.sh
+- chmod 777 ./node_modules/@pearson-components/npm-scripts/shell_scripts/run_selenium_ci_tests.sh
+- export TEST_GROUP=desktop-regression
+- ./node_modules/@pearson-components/npm-scripts/shell_scripts/run_selenium_ci_tests.sh
 - sonar-scanner
 deploy:
   provider: npm
