chore: Sonar test

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ script:
 - chmod 777 ./node_modules/@pearson-components/npm-scripts/shell_scripts/run_selenium_ci_tests.sh
 - export TEST_GROUP=desktop-regression
 - ./node_modules/@pearson-components/npm-scripts/shell_scripts/run_selenium_ci_tests.sh
+- filter_secrets: false
 - echo $SONAR_TOKEN
 - sonar-scanner
 deploy:
