--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,7 @@ node_js:
 addons:
   sonarcloud:
     organization: PDA.Alerts
-    token:
-      secure:
-      9d60662a7fba0cd93bc76f8ad91b15ebf7ebf8b2
+    token: 9d60662a7fba0cd93bc76f8ad91b15ebf7ebf8b2
 script:
 - npm run copy-utils
 - npm run ci
