--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 - 6
 addons:
   sonarcloud:
-    organization: serv.UXFramework
+    organization: PDA.Alerts
     token: 9d60662a7fba0cd93bc76f8ad91b15ebf7ebf8b2
 script:
 - npm run copy-utils
