chore: sonar test

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,8 @@ sonar.projectName=PDA.Alerts
 sonar.projectVersion=1.0
 
 sonar.host.url=https://devops-tools.pearson.com/sonar/
+sonar.login=serv.UXFramework
+sonar.password=zickvxwhBCL31$
 
 sonar.javascript.coveragePlugin=lcov
 
