chore: Sonar test

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,8 +3,7 @@ sonar.projectName=PDA.Alerts
 sonar.projectVersion=1.0
 
 sonar.host.url=https://devops-tools.pearson.com/sonar/
-sonar.login=serv.UXFramework
-sonar.password=zickvxwhBCL31$
+sonar.login=$SONAR_TOKEN
 
 sonar.javascript.coveragePlugin=lcov
 
