chore: Sonar test

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectName=PDA.Alerts
 sonar.projectVersion=1.0
 
 sonar.host.url=https://devops-tools.pearson.com/sonar/
-sonar.login=$SONAR_TOKEN
+sonar.login=92acf1644932f01409f4ce85ebff758d3bbc9432
 
 sonar.javascript.coveragePlugin=lcov
 
