--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "verbose": true
   },
   "dependencies": {
-    "react-addons-css-transition-group": "^15.4.2"
+    "react-transition-group": "^2.3.0"
   },
   "devDependencies": {
     "@pearson-components/npm-scripts": "^0.5.6",
@@ -81,10 +81,9 @@
     "node-sass": "~3.7.0",
     "pearson-elements": "^1.14.0",
     "prop-types": "^15.5.10",
-    "react": "15.6.0",
+    "react": "^16.2.0",
     "react-addons-test-utils": "^15.0.0",
-    "react-dom": "15.6.0",
-    "react-transition-group": "^1.2.0",
+    "react-dom": "^16.2.0",
     "sass-loader": "~3.2.0",
     "semver": "~5.1.0",
     "style-loader": "~0.13.0",
