--- a/package.json
+++ b/package.json
@@ -28,9 +28,25 @@
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/test/setup.js",
+    "verbose": true,
+    "testEnvironment": "node",
     "testPathIgnorePatterns": [
       "<rootDir>/(build|node_modules|demo|coverage|npm_scripts)/"
-    ]
+    ],
+    "moduleFileExtensions": [
+      "jsx",
+      "js",
+      "json"
+    ],
+    "collectCoverageFrom": [
+      "**/src/js/AlertList.js",
+      "**/src/js/Alert.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "lines": 80
+      }
+    }
   },
   "dependencies": {
     "react-transition-group": "^2.3.0"
